feat: Update gym location details from Pune to Sangamner and modify footer attribution.

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Creative Gym & Fitness Club - Train Smarter. Live Stronger. Join 1,200+ members at Pune's premier fitness destination with 24/7 access, certified coaches, and world-class facilities.">
+        content="Creative Gym & Fitness Club - Train Smarter. Live Stronger. Join 1,200+ members at Sangamner's premier fitness destination with 24/7 access, certified coaches, and world-class facilities.">
     <meta name="keywords"
-        content="gym, fitness, pune, personal training, group classes, crossfit, yoga, strength training">
+        content="gym, fitness, Sangamner, personal training, group classes, crossfit, yoga, strength training">
     <meta name="author" content="Creative Gym & Fitness Club">
 
     <!-- Open Graph / Social Media -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Creative Gym & Fitness Club - Train Smarter. Live Stronger.">
     <meta property="og:description"
-        content="Join 1,200+ members at Pune's premier fitness destination. 24/7 access, certified coaches, world-class facilities.">
+        content="Join 1,200+ members at Sangamner's premier fitness destination. 24/7 access, certified coaches, world-class facilities.">
     <meta property="og:url" content="https://creativegym.fitness">
 
     <!-- Theme Color -->
@@ -105,7 +105,7 @@
                     </h1>
                     <p class="hero__tagline">Train Smarter. Live Stronger.</p>
                     <p class="hero__description">
-                        Transform your body and mind at Pune's premier fitness destination.
+                        Transform your body and mind at Sangamner's premier fitness destination.
                         Join 1,200+ members who trust us with their fitness journey.
                     </p>
                     <div class="hero__buttons">
@@ -332,7 +332,7 @@
                             </div>
                             <div class="info-card__content">
                                 <h3>Location</h3>
-                                <p>Creative Gym & Fitness Club<br>FC Road, Pune, MH 411004</p>
+                                <p>Creative Gym & Fitness Club<br>Pawbaki Road, Sangamner, MH 411004</p>
                             </div>
                         </div>
 
@@ -481,7 +481,7 @@
                 <div class="footer__col">
                     <h3 class="footer__title">About Creative Gym</h3>
                     <p class="footer__text">
-                        Pune's premier fitness destination since 2015. We're committed to helping you achieve your
+                        Sangamner's premier fitness destination since 2015. We're committed to helping you achieve your
                         fitness goals with world-class facilities and expert guidance.
                     </p>
                     <div class="footer__social">
@@ -541,7 +541,7 @@
 
             <div class="footer__bottom">
                 <p>&copy; 2026 Creative Gym & Fitness Club. All rights reserved.</p>
-                <p>Made with <span class="heart">♥</span> in Pune</p>
+                <p>Made with <span class="heart">♥</span> by Shubham Jagtap</p>
             </div>
         </div>
     </footer>
